@@ -2,9 +2,9 @@
 
 # tlink.pl: runs as a cgi program and passes request to Interchange server
 #
-# $Id: mod_perl_tlink.pl,v 2.4 2007-08-09 13:40:52 pajamian Exp $
+# $Id: mod_perl_tlink.pl,v 2.5 2008-11-12 04:15:22 jon Exp $
 #
-# Copyright (C) 2002-2007 Interchange Development Group
+# Copyright (C) 2002-2008 Interchange Development Group
 # Copyright (C) 1996-2002 Red Hat, Inc.
 #
 # This program is free software; you can redistribute it and/or
@@ -21,7 +21,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-require 5.005;
+require 5.008_005;
 use strict;
 use Apache::Registry;
 use Socket;
