@@ -8,10 +8,12 @@
 See UPGRADE document for a list of incompatible changes.
 
 
-Interchange 5.7.1 released 2008-11-10.
+Interchange 5.7.1 released 2008-11-13.
 
 Core
 ----
+
+* Perl 5.8.5 or newer is now required.
 
 * Fixed regression in Vend::Table::DBI::set_slice for the following usage
   pattern (RT #200):
